--- a/index.html
+++ b/index.html
@@ -48,22 +48,24 @@
 
                         <ol>
                             <li>List Item 1</li>
-                            <li>List Item 2</li>
+                            <li>List Item 2
                                 <ol>
                                     <li>Nested list item A</li>
                                     <li>Nested list item B</li>
                                 </ol>
+                            </li>
                             <li>List Item 3</li>
                         </ol>
 
                         <h3>Unordered List</h3>
                         <ul>
                             <li>List Item 1</li>
-                            <li>List Item 2</li>
+                            <li>List Item 2
                                 <ul>
                                     <li>Nested list item A</li>
                                     <li>Nested list item B</li>
                                 </ul>
+                            </li>
                             <li>List Item 3</li>
                         </ul>
                        
